--- a/src/main/resources/templates/mymentor.html
+++ b/src/main/resources/templates/mymentor.html
@@ -2,7 +2,7 @@
 
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default_layout.html" th:with="currentPage='mentor'">
+      layout:decorator="layout/default_layout.html" th:with="currentPage='mymentor'">
 <head>
     <title>Create team</title>
     <!-- rangeSlider Plugin CSS file with desired skin-->
@@ -35,14 +35,14 @@
     <div class="inquery">
         <div class="row">
             <div class="col">
-                <button type="button" class="btn btn-outline-primary" onclick="location.href='/mymentor'">내가 멘토인 팀
+                <button type="button" class="btn btn-primary" onclick="location.href='/mymentor'">내가 멘토인 팀
                 </button>
-                <button type="button" class="btn btn-primary" onclick="location.href='/mentor'">멘토를 기다리는 멘티 목록
+                <button type="button" class="btn btn-outline-primary" onclick="location.href='/mentor'">멘토를 기다리는 멘티 목록
                 </button>
-
             </div>
         </div>
     </div>
+
     <div class="list-container">
         <table class="table">
             <thead>
@@ -81,9 +81,9 @@
                 </td>
                 <td th:text="${team.getNicknameByMentee()}"></td>
                 <td>
-                    <button type="button" class="btn btn-primary"
-                            th:onclick="onclick_matching_team([[${team}]])">
-                        세부사항 확인
+                    <button type="button" class="btn btn-danger"
+                            th:onclick="onclick_end([[${team}]])">
+                        멘토링 종료하기
                     </button>
                 </td>
             </tr>
@@ -122,28 +122,22 @@
 </div>
 
 <div layout:fragment="custom-footer">
-    <div th:replace="fragment/team_create_modal :: script"></div>
-    <div th:replace="fragment/team_matching_modal :: script"></div>
+    <div th:replace="fragment/team_viewer_modal :: script"></div>
     <script>
-        function onclick_create_team() {
-            team_create_modal_update({
-                mode: "CREATE_TEAMWISH_MENTOR", // for mentor
+        function onclick_end(team) {
+            team_viewer_modal_update({
+                team: team,
+                mode: "READONLY_END",
                 ajax_req_info: {
-                    url: "./api/v1/team",
-                    type: "POST",
-                    success_message: '해당 팀에 맨토로 등록되었습니다.',
+                    url: './api/v1/team/' + team.teamId + '/end',
+                    type: 'POST',
+                    success_message: '멘토링을 종료하였습니다.',
                     success: function () {
-                        window.location.href = '/mentor';
-                    },
-                    member_role: 'MENTOR'
+                        window.location.href = '/mymentor';
+                    }
                 }
             });
-            team_create_modal_show();
-        }
-
-        function onclick_matching_team(team) {
-            team_matching_modal_update(team);
-            team_matching_modal_show();
+            team_viewer_modal_show();
         }
     </script>
 </div>
