Feature/#259/time setting bug (#267)
* Fix: #259 예정된 시간이 아닌 다른 시간이 표기되는 버그

Fix: Date -> moment기능으로 수정했습니다.
safari에서 Data의 일부 기능이 작동하지 않거나 에러를 도출한다는 문제를
확인하여 이를 moment로 수정했습니다.
Edit: #240 api에서 인원체크 부분을 추가했습니다.
Edit: 로그인이 자동 해제될 시 상세보기 작업이 작동하지 않는 버그 수정
장시간 대기시 로그인이 해제된 후 일정 작업 시도시 재 로그인 하도록 유도

* Fix: #259 modal_view 다른 프로젝트 선택

Fix: jquery id load 오타 수정

--- a/src/main/resources/templates/fragment/team_viewer_modal.html
+++ b/src/main/resources/templates/fragment/team_viewer_modal.html
@@ -23,7 +23,6 @@
                             <div class="mb-3">
                                 <label for="tv_select_project" class="form-label">프로젝트 명칭</label>
                                 <select class="form-select" id="tv_select_project" required disabled>
-                                    <option selected disabled value="">프로젝트 선택하기</option>
                                     <option th:each="proj : ${projects}"
                                             th:value="${proj.id}"
                                             th:utext="${proj.name}"></option>
@@ -35,7 +34,6 @@
                             <div class="mb-3">
                                 <label for="tv_select_location" class="form-label">장소</label>
                                 <select class="form-select" id="tv_select_location" required disabled>
-                                    <option selected value="">장소 선택하기</option>
                                     <option th:each="loc : ${locations}"
                                             th:value="${loc.id}"
                                             th:utext="${loc.name}"></option>
@@ -92,17 +90,17 @@
     <script>
         var tv_ajax_req_info = undefined;
         var tv_team = undefined;
-        var tv_startDate = new Date(2020, 0, 1, 0, 0, 0).valueOf();
+        var tv_startDate = moment('2020-01-01T00:00:00').valueOf();
         var currentUser = undefined;
 
         $("#tv_input_time_rangeslider").ionRangeSlider({
             skin: "round",
             type: "double",
             grid: true,
-            min: timeToTS(moment(new Date(2020, 0, 1, 0, 0, 0))),
-            max: timeToTS(moment(new Date(2020, 0, 2, 0, 0, 0))),
-            from: timeToTS(moment(new Date(2020, 0, 1, 6, 0, 0))),
-            to: timeToTS(moment(new Date(2020, 0, 1, 18, 0, 0))),
+            min: timeToTS(moment('2020-01-01T00:00:00')),
+            max: timeToTS(moment('2020-01-02T00:00:00')),
+            from: timeToTS(moment('2020-01-01T06:00:00')),
+            to: timeToTS(moment('2020-01-01T18:00:00')),
             step: 900000,
             prettify: function (ts) {
                 var m = moment(ts);
@@ -138,8 +136,8 @@
             tv_time_rangeslider.update({
                 min: timeToTS(minDate),
                 max: timeToTS(minDate.add(1, 'days')),
-                from: timeToTS(moment(new Date(team.startTime))),
-                to: timeToTS(moment(new Date(team.endTime))),
+                from: timeToTS(moment(team.startTime)),
+                to: timeToTS(moment(team.endTime)),
                 prettify: function (ts) {
                     var m = moment(ts);
 
@@ -197,6 +195,12 @@
                 }
             );
 
+            if (currentUser == null) {
+                alert("시간이 만료되어 로그아웃 되었습니다.\n" +
+                    "다시 로그인해주세요");
+                window.location.href = '/';
+            }
+
             if (team.status == 'WAITING') {
                 let rst = team.members.some((member) => {
                     return (currentUser.nickname == member.nickname && member.creator);
@@ -225,10 +229,10 @@
             if (locations == undefined)
                 locations = getLocations();
 
-            $('#tm_select_location option').each(function () {
+            $('#tv_select_location option').each(function () {
                 $(this).removeAttr("selected");
             });
-            $('#tm_select_project option').each(function () {
+            $('#tv_select_project option').each(function () {
                 $(this).removeAttr("selected");
             });
 
