추가: #199 남은 시간 표시 기능 추가

--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -49,6 +49,8 @@
     <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
     <!--Moment plugin-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <!--jQueery TimeAgo plugin-->
+    <script src="http://timeago.yarp.com/jquery.timeago.js" type="text/javascript"></script>
     <script>
         var locations = undefined;
 
