--- a/src/main/resources/templates/fragment/team_matching_modal.html
+++ b/src/main/resources/templates/fragment/team_matching_modal.html
@@ -160,12 +160,12 @@
             team.members.forEach((member) => {
                 if (member.memberRole == "멘토") {
                     $memberList.append('<li class="list-group-item">' +
-                        '<a class="text-dark" href="https://profile.intra.42.fr/users/' + member.nickname + '">' + member.nickname + '</a>' +
+                        '<a class="text-dark" target="_blank" href="https://profile.intra.42.fr/users/' + member.nickname + '">' + member.nickname + '</a>' +
                         ' <span class="rounded-pill bg-danger text-light p-1" style="font-size: 0.85em">멘토</span>' +
                         '</li>');
                 } else {
                     $memberList.append('<li class="list-group-item">' +
-                        '<a class="text-dark" href="https://profile.intra.42.fr/users/' + member.nickname + '">' + member.nickname + '</a>' +
+                        '<a class="text-dark" target="_blank" href="https://profile.intra.42.fr/users/' + member.nickname + '">' + member.nickname + '</a>' +
                         '</li>');
                 }
             })
