--- a/src/main/resources/templates/mymentor.html
+++ b/src/main/resources/templates/mymentor.html
@@ -2,7 +2,7 @@
 
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default_layout.html" th:with="currentPage='mymentor'">
+      layout:decorator="layout/default_layout.html" th:with="currentPage='mentor'">
 <head>
     <title>Create team</title>
     <!-- rangeSlider Plugin CSS file with desired skin-->
@@ -27,8 +27,7 @@
     </button>
     <hr/>
     <!-- Modal -->
-    <div th:replace="fragment/team_create_modal :: modal"></div>
-    <div th:replace="fragment/team_matching_modal :: modal"></div>
+    <div th:replace="fragment/team_viewer_modal :: modal"></div>
     <!-- Content-->
     <h2>멘토를 기다리는 멘티 목록</h2>
 
@@ -53,7 +52,10 @@
                 <th scope="col">희망 인원</th>
                 <th scope="col">희망 일자</th>
                 <th scope="col">희망 시간</th>
-                <th scope="col">개설자</th>
+                <th scope="col">전체 인원</th>
+                <th scope="col">현재 인원</th>
+                <th scope="col">남은 인원</th>
+                <th scope="col">팀 상태</th>
                 <th scope="col">작업</th>
             </tr>
             </thead>
@@ -79,11 +81,21 @@
                     </div>
                     <div th:if="${team.startTime} == null OR ${team.endTime} == null" th:text="상관없음"></div>
                 </td>
-                <td th:text="${team.getNicknameByMentee()}"></td>
+                <td th:text="${team.maxMemberCount}">3</td>
+                <td th:text="${team.currentMemberCount}">2</td>
+                <td th:text="${team.maxMemberCount - team.currentMemberCount}">1</td>
                 <td>
-                    <button type="button" class="btn btn-danger"
-                            th:onclick="onclick_end([[${team}]])">
-                        멘토링 종료하기
+                    <div th:if="${#strings.contains(team.status, 'END')}">
+                        종료
+                    </div>
+                    <div th:unless="${#strings.contains(team.status, 'END')}">
+                        진행중
+                    </div>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-primary"
+                            th:onclick="onclick_detail_team([[${team}]])">
+                        상세 보기
                     </button>
                 </td>
             </tr>
@@ -124,14 +136,10 @@
 <div layout:fragment="custom-footer">
     <div th:replace="fragment/team_viewer_modal :: script"></div>
     <script>
-        function onclick_end(team) {
+        function onclick_detail_team(team) {
             team_viewer_modal_update({
                 team: team,
-                mode: "READONLY_END",
                 ajax_req_info: {
-                    url: './api/v1/team/' + team.teamId + '/end',
-                    type: 'POST',
-                    success_message: '멘토링을 종료하였습니다.',
                     success: function () {
                         window.location.href = '/mymentor';
                     }
