버그: mymentor 페이지에서 멘토링 받기 버튼이 안눌리는 버그 수정

--- a/src/main/resources/templates/mentor.html
+++ b/src/main/resources/templates/mentor.html
@@ -133,7 +133,7 @@
                     type: "POST",
                     success_message: '해당 팀에 맨토로 등록되었습니다.',
                     success: function () {
-                        window.location.href = '/mentor';
+                        window.location.href = '/mymentor';
                     },
                     member_role: 'MENTOR'
                 }
