--- a/src/main/resources/templates/mymentor.html
+++ b/src/main/resources/templates/mymentor.html
@@ -28,6 +28,8 @@
     <hr/>
     <!-- Modal -->
     <div th:replace="fragment/team_viewer_modal :: modal"></div>
+    <div th:replace="fragment/team_create_modal :: modal"></div>
+    <div th:replace="fragment/team_matching_modal :: modal"></div>
     <!-- Content-->
     <h2>멘토를 기다리는 멘티 목록</h2>
 
@@ -135,6 +137,30 @@
 
 <div layout:fragment="custom-footer">
     <div th:replace="fragment/team_viewer_modal :: script"></div>
+    <div th:replace="fragment/team_create_modal :: script"></div>
+    <div th:replace="fragment/team_matching_modal :: script"></div>
+    <script>
+        function onclick_create_team() {
+            team_create_modal_update({
+                mode: "CREATE_TEAMWISH_MENTOR", // for mentor
+                ajax_req_info: {
+                    url: "./api/v1/team",
+                    type: "POST",
+                    success_message: '해당 팀에 맨토로 등록되었습니다.',
+                    success: function () {
+                        window.location.href = '/mymentor';
+                    },
+                    member_role: 'MENTOR'
+                }
+            });
+            team_create_modal_show();
+        }
+
+        function onclick_matching_team(team) {
+            team_matching_modal_update(team);
+            team_matching_modal_show();
+        }
+    </script>
     <script>
         function onclick_detail_team(team) {
             team_viewer_modal_update({
