추가: #232 멘토가 END를 할 수 있는 기능 추가 (#275)
* 추가: member에서 member Role로 조회하도록 추가함

* 추가: 내가 멘토인 팀 템플릿 추가 - modal 미작동

* 추가: 공통 모달로 팀 종료하는 기능 추가

* FIX: creator 조건문 로직을 원래대로 변경 / entTeam 서비스 레이어 추가

* 추가: 팀 종료시 팀 전체 인원에게 메일이 가도록 추가

* 버그: mymentor 페이지에서 멘토링 받기 버튼이 안눌리는 버그 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -97,6 +97,8 @@
                             <span th:text="${team.project.getName()}">Project Title</span>
                         </h5>
                         <h6 class="card-subtitle mb-2 text-muted">
+                            <span th:if="${#strings.contains(team.status, 'END')}"
+                                  class="rounded-pill bg-danger text-light p-1" style="font-size: 0.85em">종료됨</span>
                             <i class="bi bi-calendar-week" style="font-size: 0.85rem;"></i>
                             <span th:text="${#temporals.format(team.startTime, 'YYYY/MM/dd')}"></span><br/>
                             <span style="font-size: 0.85rem">
