--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -50,7 +50,7 @@
     <!--Moment plugin-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <!--jQueery TimeAgo plugin-->
-    <script src="http://timeago.yarp.com/jquery.timeago.js" type="text/javascript"></script>
+    <script src="https://timeago.yarp.com/jquery.timeago.js" type="text/javascript"></script>
     <script>
         var locations = undefined;
 
