--- a/src/main/resources/templates/fragment/team_matching_modal.html
+++ b/src/main/resources/templates/fragment/team_matching_modal.html
@@ -72,10 +72,17 @@
                             <input id="tm_input_time_rangeslider" type="text">
                         </div>
                     </div>
-                    <div class="mb-3">
+                    <div class="row">
                         <hr/>
-                        <label for="tm_pre_description" class="form-label">설명</label>
-                        <pre id="tm_pre_description"></pre>
+                        <div class="mb-3">
+                            <h4 id="tm_h4_subject"></h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="mb-3">
+                            <pre id="tm_pre_description"></pre>
+                        </div>
+                        <hr/>
                     </div>
                 </form>
                 <div class="members_in_team">
@@ -176,6 +183,7 @@
 
             $('#tm_input_datepicker').val(moment(team.startTime).format('YYYY-MM-DD'));
             $('#tm_input_max_member_count').val(team.maxMemberCount);
+            $('#tm_h4_subject').text(team.subject);
             $('#tm_pre_description').text(team.description);
         }
 
