--- a/src/main/resources/templates/fragment/team_viewer_modal.html
+++ b/src/main/resources/templates/fragment/team_viewer_modal.html
@@ -64,10 +64,17 @@
                             <input id="tv_input_time_rangeslider" type="text">
                         </div>
                     </div>
-                    <div class="mb-3">
+                    <div class="row">
                         <hr/>
-                        <label for="tv_pre_description" class="form-label">설명</label>
-                        <pre id="tv_pre_description"></pre>
+                        <div class="mb-3">
+                            <h4 id="tv_h4_subject"></h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="mb-3">
+                            <pre id="tv_pre_description"></pre>
+                        </div>
+                        <hr/>
                     </div>
                 </form>
                 <div class="members_in_team">
@@ -180,6 +187,7 @@
             $('#tv_input_datepicker').val(moment(team.startTime).format('YYYY-MM-DD'));
             $('#tv_input_max_member_count').val(team.maxMemberCount);
             $('#tv_create_team_form').attr('team_id', team.teamId);
+            $('#tv_h4_subject').text(team.subject);
             $('#tv_pre_description').text(team.description);
 
             $.ajax({
