--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -38,13 +38,11 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">프로젝트 명칭</th>
+                <th scope="col">제목</th>
                 <th scope="col">장소</th>
-                <th scope="col">희망 일자</th>
-                <th scope="col">희망 시간</th>
-                <th scope="col">전체 인원</th>
-                <th scope="col">현재 인원</th>
-                <th scope="col">남은 인원</th>
-                <th scope="col">담당 멘토</th>
+                <th scope="col">일시</th>
+                <th scope="col">인원</th>
+                <th scope="col">멘토</th>
                 <th scope="col">작업</th>
             </tr>
             </thead>
@@ -52,18 +50,21 @@
             <tr th:each="team : ${teams}">
                 <th scope="row" th:text="${team.teamId}">ID</th>
                 <td th:text="${team.project.getName()}">ProjectName</td>
+                <td th:text="${team.getSubject()}"></td>
                 <td th:text="${team.location.getName()}"></td>
-                <td th:text="${#temporals.format(team.startTime, 'MM/dd')}">날짜</td>
                 <td>
+                    <span th:text="${#temporals.format(team.startTime, 'MM/dd')}">일자</span>
                     <span th:text="${#temporals.format(team.startTime, 'HH:mm')}">시작시간</span>
                     ~
                     <span th:if="${#temporals.format(team.endTime, 'HH:mm')} == '00:00'">24:00</span>
                     <span th:unless="${#temporals.format(team.endTime, 'HH:mm')} == '00:00'"
                           th:text="${#temporals.format(team.endTime, 'HH:mm')}">종료시간</span>
                 </td>
-                <td th:text="${team.maxMemberCount}">3</td>
-                <td th:text="${team.currentMemberCount}">2</td>
-                <td th:text="${team.maxMemberCount - team.currentMemberCount}">1</td>
+                <td>
+                    <span th:text="${team.currentMemberCount}"></span>
+                    /
+                    <span th:text="${team.maxMemberCount}"></span>
+                </td>
                 <td>
                     <span th:if="${#strings.contains(team.getNicknameByMentor(),'empty')}">미지정</span>
                     <span th:unless="${#strings.contains(team.getNicknameByMentor(),'empty')}"
