--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -172,7 +172,7 @@
                     type: 'DELETE',
                     success_message: '해당 팀에서 탈퇴했습니다.',
                     success: function () {
-                        window.location.href = '/';
+                        window.location.href = '/list_myteam';
                     }
                 }
             });
