개선: #289 datepicker 및 오타 수정
개선: modal창이 닫혀도 datepicker창이 남아있는 로직 수정
개선: '팀리스트' 페이지의 TYPO 수정 멘트 -> 멘토

--- a/src/main/resources/templates/fragment/team_create_modal.html
+++ b/src/main/resources/templates/fragment/team_create_modal.html
@@ -156,8 +156,10 @@
 
         const tc_time_rangeslider = $("#tc_input_time_rangeslider").data("ionRangeSlider");
 
+        var tc_datepicker;
+
         function set_team_create_modal_datepicker() {
-            $('#tc_input_datepicker').datepicker({
+            tc_datepicker = $('#tc_input_datepicker').datepicker({
                 uiLibrary: 'bootstrap4',
                 format: 'yyyy-mm-dd',
                 format: 'yyyy-mm-dd',
@@ -237,6 +239,9 @@
             detail_modal.show();
         }
 
+        $('#team_create_modal').on('hidden.bs.modal', function () {
+            tc_datepicker.close();
+        })
 
         /* ajax action func*/
         function submit_create_team() {
