수정: #292 TYPO 수정
수정: 죵료 => 종료

--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -124,7 +124,7 @@
                                 th:if="${#strings.contains(team.status, 'WAITING')}" disabled>멘토를 기다리는 중
                         </button>
                         <button type="button" class="btn btn-secondary"
-                                th:if="${#strings.contains(team.status, 'END')}" disabled>죵료된 멘토링
+                                th:if="${#strings.contains(team.status, 'END')}" disabled>종료된 멘토링
                         </button>
                     </div>
                 </td>
